@@ -1,3 +1,6 @@
+2017-05-31  Kirit Saelensminde  <kirit@felspar.com>
+ Count the number of times an exception has been absorbed.
+
 2017-05-29  Kirit Saelensminde  <kirit@felspar.com>
  Remove `variant` for storing atoms in `json`
 
